incluindo documentações inciais e licença

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:20
 
 RUN npm install husky eslint typescript @angular/cli @compodoc/compodoc sass-lint sassdoc -g
-RUN npm install npx -g --force
 
 RUN apt update && apt install -y curl python && rm -rf /var/lib/apt/lists/*
 
@@ -13,6 +12,7 @@ WORKDIR /omegle-nostr
 
 COPY ./.gitconfig /root/.gitconfig
 COPY ./.ssh /root/.ssh
+RUN chmod 600 -R /root/.ssh
 
 ENV LANG C.UTF-8
 ENV TZ America/Sao_Paulo
