--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "author": "António Conselheiro",
   "license": "UNGOVERNABLE",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "npm run dev",
+    "dev": "ng serve --host=0.0.0.0",
+    "build": "ng build & sass-lint -c ./.sass-lint.yml -v -q",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "docs": "sassdoc src --dest=sassdoc --verbose && npx compodoc -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "nostr-tools": "^1.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
