elaborando estrutura em angular

--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "ng serve --host=0.0.0.0",
-    "build": "ng build & sass-lint -c ./.sass-lint.yml -v -q",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint & sass-lint -c ./.sass-lint.yml -v -q",
     "docs": "sassdoc src --dest=sassdoc --verbose && npx compodoc -p tsconfig.json"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint && npm run build"
+    }
   },
   "repository": {
     "type": "git",
