--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
           "options": {
             "outputPath": "docs",
             "index": "src/index.html",
+            "baseHref": "/omegle-nostr/",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
