--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@nostr-dev-kit/ndk": "^2.0.5",
     "nostr-tools": "^1.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
