revisão durante overview apresentando o projeto a outros técnicos

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
 				"wix.vscode-import-cost",
 				"stylelint.vscode-stylelint",
 				"esbenp.prettier-vscode",
-				"ahmadawais.shades-of-purple"
+				"ahmadawais.shades-of-purple",
+				"ms-vsliveshare.vsliveshare"
 			]
 		}
 	}
