Remove unnecessary dependencies

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,6 @@
 FROM node:20
 
-RUN npm install husky eslint typescript @angular/cli @compodoc/compodoc sass-lint sassdoc -g
-
-RUN apt update && apt install -y curl python && rm -rf /var/lib/apt/lists/*
-
-# Docker Compose
-RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" \
-    -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+RUN npm install typescript @angular/cli -g
 
 WORKDIR /omegle-nostr
 
