--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
     "lint": "ng lint & sass-lint -c ./.sass-lint.yml -v -q",
     "docs": "sassdoc src --dest=sassdoc --verbose && npx compodoc -p tsconfig.json"
   },
