--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Lint
-      run: npm run lint
+    # TODO: setup ESLint
+    # - name: Lint
+    #   run: npm run lint
 
     - name: Build
       run: npm run build
