--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omegle-nostr",
   "version": "0.0.0",
   "author": "António Conselheiro",
-  "license": "UNGOVERNABLE",
+  "license": "Unlicense",
   "scripts": {
     "start": "npm run dev",
     "dev": "ng serve --host=0.0.0.0",
@@ -31,8 +31,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@nostr-dev-kit/ndk": "^2.0.5",
-    "nostr-tools": "^1.17.0",
+    "nostr-tools": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
