--- a/relay-debug/docker-compose.yml
+++ b/relay-debug/docker-compose.yml
@@ -2,12 +2,15 @@ version: '3.9'
 
 services:
   relay-strfry:
+    image: relay-strfry
     container_name: strfry
-    image: dockurr/strfry
+    build:
+      context: ../.
+      dockerfile: ./relay-debug/Dockerfile.relay
     ports:
       - 7777:7777
     volumes:
-      - ./strfry-db:/app/strfry-db
+      - ./strfry-db:/strfry/strfry-db
       - ./strfry.conf:/etc/strfry.conf
     tty: true
   nostr-debug:
