--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "Unlicense",
   "scripts": {
     "start": "npm run dev",
-    "dev": "ng serve --disable-host-check",
+    "dev": "ng serve --host=0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
