--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Beta packages
+belomonte-nostr-ngx-0.0.1.tgz
+
 # Credentials
 /gitconfig
 /.gitconfig
