--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,17 +1,16 @@
-version: '3.9'
-
 services:
-  omegle-nostr-dev:
-    image: omegle-nostr-dev
-    container_name: omegle-nostr-dev
+  omeglestr-dev:
+    image: omeglestr-dev
+    container_name: omeglestr-dev
     build:
       context: ../.
       dockerfile: ./.devcontainer/Dockerfile
-    working_dir: /omegle-nostr
+    working_dir: /omeglestr
     ports:
+      - "9876:9876"
       - "9229:9229"
       - "4200:4200"
     volumes:
-      - ..:/omegle-nostr:cached
+      - ..:/omeglestr:cached
       - /var/run/docker.sock:/var/run/docker.sock
     tty: true
