--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "omegle-nostr": {
+    "omeglestr": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "docs",
             "index": "src/index.html",
-            "baseHref": "/omegle-nostr/",
+            "baseHref": "/omeglestr/",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -66,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "omegle-nostr:build:production"
+              "buildTarget": "omeglestr:build:production"
             },
             "development": {
-              "buildTarget": "omegle-nostr:build:development"
+              "buildTarget": "omeglestr:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "omegle-nostr:build"
+            "buildTarget": "omeglestr:build"
           }
         },
         "test": {
@@ -96,7 +96,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "browsers": "ChromeHeadlessCI",
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
