--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omegle-nostr",
+  "name": "omeglestr",
   "version": "0.0.0",
   "author": "António Conselheiro",
   "license": "Ungovernable",
@@ -8,8 +8,8 @@
     "dev": "ng serve --host=0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
+    "test": "ng test --no-watch",
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint & sass-lint -c ./.sass-lint.yml -v -q",
     "docs": "sassdoc src --dest=sassdoc --verbose && npx compodoc -p tsconfig.json"
   },
