resolvendo problema do observable que não emitia depois do EOSE

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -30,7 +30,7 @@ RUN ssh-add -D && ssh-add /root/.ssh/id_ed25519 || true
 
 WORKDIR /omeglestr
 
-# Brazilian time and keyboard
+# Keyboard & Timezone
 ENV LANG=C.UTF-8
 ENV TZ=America/Sao_Paulo
 
