--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
     "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.30.1",
+    "ngx-toastr": "^19.0.0",
     "nostr-tools": "^2.7.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
