incluindo configurações para build de produção

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,25 +4,25 @@
     "docker-compose.yml"
   ],
   "service": "omeglestr-dev",
-	"workspaceFolder": "/omeglestr",
-	"customizations": {
-		"vscode": {
-			"extensions": [
+  "workspaceFolder": "/omeglestr",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
         "Angular.ng-template",
         "ms-vscode.vscode-typescript-next",
-        "dbaeumer.vscode-eslint",
         "eamodio.gitlens",
-        "ms-azuretools.vscode-docker",
         "naumovs.color-highlight",
-        "SimonSiefke.svg-preview",
         "manishsencha.readme-preview",
         "wix.vscode-import-cost",
         "stylelint.vscode-stylelint",
         "esbenp.prettier-vscode",
         "ahmadawais.shades-of-purple",
-        "ms-vsliveshare.vsliveshare",
+        "ms-azuretools.vscode-docker",
         "ZainChen.json"
       ]
-		}
-	}
+    }
+  }
 }
