--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "license": "Ungovernable",
   "scripts": {
     "start": "npm run dev",
-    "dev": "ng serve --host=0.0.0.0",
-    "build": "ng build",
+    "dev": "ng serve --configuration development --host=0.0.0.0",
+    "build": "NG_APP_RELAYS=wss://nos.lol,wss://nostr.mom NG_APP_USE_HASH=1 ng build --production",
+    "build:docker": "docker build -t omeglestr:latest .",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch",
-    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
-    "lint": "ng lint & sass-lint -c ./.sass-lint.yml -v -q",
-    "docs": "sassdoc src --dest=sassdoc --verbose && npx compodoc -p tsconfig.json"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run lint && npm run build"
-    }
+    "test": "ng test --no-watch --browsers=ChromeHeadlessCI",
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI"
   },
   "repository": {
     "type": "git",
@@ -42,6 +36,7 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "~17.3.8",
     "@angular/compiler-cli": "^17.3.12",
+    "@ngx-env/builder": "^18.0.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
