mantendo a versão inicial de produção somente com um relay

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "ng serve --configuration development --host=0.0.0.0",
-    "build": "NG_APP_RELAYS=wss://nos.lol,wss://nostr.mom NG_APP_USE_HASH=1 ng build --configuration production",
+    "build": "NG_APP_RELAYS=wss://nos.lol NG_APP_USE_HASH=1 ng build --configuration production",
     "build:docker": "docker build -t omeglestr:latest .",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --no-watch --browsers=ChromeHeadlessCI",
