--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "url": "git+https://github.com/antonioconselheiro/omegle-nostr.git"
   },
   "dependencies": {
-    "@angular/animations": "^17.3.12",
-    "@angular/common": "^17.3.12",
-    "@angular/compiler": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/forms": "^17.3.12",
-    "@angular/platform-browser": "^17.3.12",
-    "@angular/platform-browser-dynamic": "^17.3.12",
-    "@angular/router": "^17.3.12",
-    "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.30.1",
+    "@angular/animations": "^18.2.8",
+    "@angular/common": "^18.2.8",
+    "@angular/compiler": "^18.2.8",
+    "@angular/core": "^18.2.8",
+    "@angular/forms": "^18.2.8",
+    "@angular/platform-browser": "^18.2.8",
+    "@angular/platform-browser-dynamic": "^18.2.8",
+    "@angular/router": "^18.2.8",
+    "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.36.1",
     "ngx-toastr": "^19.0.0",
     "nostr-tools": "^2.7.2",
     "rxjs": "~7.8.0",
@@ -33,9 +33,9 @@
     "zone.js": "~0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "~17.3.8",
-    "@angular/compiler-cli": "^17.3.12",
+    "@angular/build": "^18.2.8",
+    "@angular/cli": "~18.2.8",
+    "@angular/compiler-cli": "^18.2.8",
     "@ngx-env/builder": "^18.0.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
