--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zone.js": "~0.14.8"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^18.2.8",
     "@angular/build": "^18.2.8",
     "@angular/cli": "~18.2.8",
     "@angular/compiler-cli": "^18.2.8",
