revisando implementação de geração de id de evento com pow

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,12 @@
             "assets": [
               "src/manifest.webmanifest",
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "src/app/workers",
+                "output": "/workers"
+              }
             ],
             "styles": [
               "src/styles.scss",
