review how to deal with credentials when container goes up

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
   ],
   "service": "omeglestr-dev",
   "workspaceFolder": "/omeglestr",
+  "postCreateCommand": "./.devcontainer/auth.sh",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
