--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Dev packages
+belomonte-ngx-parody-api-1.0.0.tgz
+
 # Credentials
-/gitconfig
-/.gitconfig
-/.ssh
+.gitconfig
+.ssh
 
 # Compiled output
 /dist
