--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omeglestr",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "author": "António Conselheiro",
   "license": "Ungovernable",
   "scripts": {
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^18.2.8",
     "@angular/router": "^18.2.8",
     "@belomonte/async-modal-ngx": "^1.0.0",
+    "@belomonte/ngx-parody-api": "file:belomonte-ngx-parody-api-1.0.0.tgz",
     "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.36.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
