--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "^18.2.8",
     "@angular/router": "^18.2.8",
     "@belomonte/async-modal-ngx": "^1.0.0",
-    "@belomonte/ngx-parody-api": "file:belomonte-ngx-parody-api-0.1.0.tgz",
+    "@belomonte/ngx-parody-api": "^0.1.1",
     "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.36.1",
     "ngx-toastr": "^19.0.0",
     "nostr-tools": "^2.10.1",
