--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "browsers": "ChromeHeadlessCI",
-            "karmaConfig": "karma.conf.js",
-            "webWorkerTsConfig": "tsconfig.worker.json"
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
